--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,17 @@
   <!-- <img src="img/Assets/Landing Page/Header/banner_bg.png" > -->
   <div class = "start">
 	  <div class = "left-half">
-	  	<div class = "triangle-down"></div>
+	  	<div class = "triangle-down">
+	  		<!-- <img src="/img/Assets/Landing Page/Header/android_logo.png"> -->
+	  	</div>
 	  	<div class = "triangle-up"></div>
 	  	<div class = "triangle-down"></div>
 	  </div>
 	  <div class="right-half">
+	  <h1>HOW MUCH</h1>
+	  <h1>TO MAKE AN APP</h1>
+	  <h4>Estimate the cost of an app easily</h4>
+	  <h4>using this handy tool.</h4>
 	  </div>
   </div>
   <h2>What platform will your apps run on?</h2>
@@ -111,6 +117,105 @@
 	    	</div>
 	    </div>
 	</div>
+
+	<h2>What kind of data will you store?</h2>
+	<p class="select">(Select all that apply)</p>
+	<div class="theme">
+	 		<div class="div13"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-4/n_a.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div14"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-4/data.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div15"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-4/Large-Files.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+	</div>	
+
+	<h2>Will you need to integrate any existing data sources?</h2>
+	<div class="theme">
+	 		<div class="div16"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-5/no.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div17"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-5/simple.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div18"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-5/Advanced.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+	</div>
+
+	<h2>Will your app use location data?</h2>
+	<div class="theme">
+	 		<div class="div19"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-6/no.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div20"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-6/simple.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div21"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-6/Advanced.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+	</div>
+
+	<h2>Will you integrate data from any third party cloud APIs?</h2>
+	<div class="theme">
+	 		<div class="div22"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-7/no.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div23"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-7/simple.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div24"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-7/Advanced.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+	</div>
+
+	<h2>How will you engage with your users?</h2>
+	<p class="select">(Select all that apply)</p>
+	<div class="theme">
+	 		<div class="div25"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-8/n_a.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div26"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-8/Push_SMS_Email.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+		    <div class="div27"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-8/Advanced_social.png" class = "imgclass"/>
+		    	</div>
+		    </div>
+	</div>
+
+
 
 
 
