Added header and footer.

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,11 @@
 
 </head>
 <body>
+<header>
+    <div class="row top-header">
+    <img src="/img/Assets/Landing Page/Header/hashedin_logo.png">
+    </div>
+</header>
   <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
@@ -44,174 +49,339 @@
   <p class="select">(Select all that apply)</p>
   <!-- <div id="diamond"> -->
   	
-  	<div class="theme">
+  	<div class="theme-five">
  		<div class="div1"> 	
-	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-1/Android.png" class = "imgclass"/>
-	    	</div>
-	    </div>
-	    <div class="div2"> 	
-	    	<div class="imagecontainer">
+	    	<div class="imagecontainer" id="platform_iOS">
 	    		<img src="/img/Assets/Landing Page/Step-1/iOS.png" class = "imgclass"/>
 	    	</div>
+	    	<p>iOS</p>
+	    </div>
+	    <div class="div2"> 	
+	    	<div class="imagecontainer" id="platform_Android">
+	    		<img src="/img/Assets/Landing Page/Step-1/Android.png" class = "imgclass"/>
+	    	</div>
+	    	<p>Android</p>
 	    </div>
 	    <div class="div3"> 	
-	    	<div class="imagecontainer">
+	    	<div class="imagecontainer" id="platform_Windows">
 	    		<img src="/img/Assets/Landing Page/Step-1/Windows.png" class = "imgclass"/>
 	    	</div>
+	    	<p>Windows</p>
 	    </div>
 	    <div class="div4"> 	
-	    	<div class="imagecontainer">
+	    	<div class="imagecontainer" id="platform_Blackberry">
 	    		<img src="/img/Assets/Landing Page/Step-1/Blackberry.png" class = "imgclass"/>
 	    	</div>
+	    	<p>Blackberry</p>
 	    </div>
 	    <div class="div5"> 	
-	    	<div class="imagecontainer">
+	    	<div class="imagecontainer" id="platform_Web">
 	    		<img src="/img/Assets/Landing Page/Step-1/Web.png" class = "imgclass"/>
 	    	</div>
+	    	<p>Web</p>
 	    </div>
     </div>
 
     <h2>How big is your app going to be?</h2>
 
-	<div class="theme">
+	<div class="theme-three">
 	 		<div class="div6"> 	
-		    	<div class="imagecontainer">
+		    	<div class="imagecontainer" id="size_small">
 		    		<img src="/img/Assets/Landing Page/Step-2/small.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Small</p>
+		    	<span class="inner_span">(1-3 Screens)</span>
 		    </div>
 		    <div class="div7"> 	
-		    	<div class="imagecontainer">
+		    	<div class="imagecontainer" id="size_medium">
 		    		<img src="/img/Assets/Landing Page/Step-2/Medium.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Medium</p>
+		    	<span class="inner_span">(3-8 Screens)</span>
 		    </div>
 		    <div class="div8"> 	
-		    	<div class="imagecontainer">
+		    	<div class="imagecontainer" id="size_large">
 		    		<img src="/img/Assets/Landing Page/Step-2/Large.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Large</p>
+		    	<span class="inner_span">(9+ Screens)</span>
 		    </div>
 	</div>
 
 	<h2>How will you handle user management?</h2>
 	<p class="select">(Select all that apply)</p>
 
-	<div class="theme">
+	<div class="theme-four">
  		<div class="div9"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing Page/Step-3/n_a.png" class = "imgclass"/>
 	    	</div>
+	    	<p>N/A</p>
 	    </div>
 	    <div class="div10"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing Page/Step-3/Standard.png" class = "imgclass"/>
 	    	</div>
+	    	<p>Standard</p>
 	    </div>
 	    <div class="div11"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing Page/Step-3/Social.png" class = "imgclass"/>
 	    	</div>
+	    	<p>Social</p>
 	    </div>
 	     <div class="div12"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing Page/Step-3/Enterprise.png" class = "imgclass"/>
 	    	</div>
+	    	<p>Enterprise</p>
 	    </div>
 	</div>
 
 	<h2>What kind of data will you store?</h2>
 	<p class="select">(Select all that apply)</p>
-	<div class="theme">
+	<div class="theme-three">
 	 		<div class="div13"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-4/n_a.png" class = "imgclass"/>
 		    	</div>
+		    	<p>N/A</p>
+		    	<span class="inner_span">(I am not storing any data)</span>
 		    </div>
 		    <div class="div14"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-4/data.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Data</p>
+		    	<span class="inner_span">(Just structured data,
+		    	<br>suited for a database)</span>
 		    </div>
 		    <div class="div15"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-4/Large-Files.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Large Files</p>
+		    	<span class="inner_span">(Structured data plus files
+		    	<br>like images,videos,etc)</span>
 		    </div>
 	</div>	
 
 	<h2>Will you need to integrate any existing data sources?</h2>
-	<div class="theme">
+	<div class="theme-three">
 	 		<div class="div16"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-5/no.png" class = "imgclass"/>
 		    	</div>
+		    	<p>No</p>
 		    </div>
 		    <div class="div17"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-5/simple.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Simple</p>
 		    </div>
 		    <div class="div18"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-5/Advanced.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Advanced</p>
 		    </div>
 	</div>
 
 	<h2>Will your app use location data?</h2>
-	<div class="theme">
+	<div class="theme-three">
 	 		<div class="div19"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-6/no.png" class = "imgclass"/>
 		    	</div>
+		    	<p>No</p>
 		    </div>
 		    <div class="div20"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-6/simple.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Simple</p>
 		    </div>
 		    <div class="div21"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-6/Advanced.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Advanced</p>
 		    </div>
 	</div>
 
 	<h2>Will you integrate data from any third party cloud APIs?</h2>
-	<div class="theme">
+	<div class="theme-three">
 	 		<div class="div22"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-7/no.png" class = "imgclass"/>
 		    	</div>
+		    	<p>No</p>
 		    </div>
 		    <div class="div23"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-7/simple.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Simple</p>
 		    </div>
 		    <div class="div24"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-7/Advanced.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Advanced</p>
 		    </div>
 	</div>
 
 	<h2>How will you engage with your users?</h2>
 	<p class="select">(Select all that apply)</p>
-	<div class="theme">
+	<div class="theme-three">
 	 		<div class="div25"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-8/n_a.png" class = "imgclass"/>
 		    	</div>
+		    	<p>N/A</p>
 		    </div>
 		    <div class="div26"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-8/Push_SMS_Email.png" class = "imgclass"/>
 		    	</div>
+		    	<p>Push,SMS,Email</p>
 		    </div>
 		    <div class="div27"> 	
 		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing Page/Step-8/Advanced_social.png" class = "imgclass"/>
 		    	</div>
+		    	<p> Advanced social integration</p>
+		    </div>
+	</div>
+
+	<h2>What will be the quality of your experience?</h2>
+	<div class="theme-two">
+	 		<div class="div28"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-9/mvp.png" class = "imgclass"/>
+		    	</div>
+		    	<p>MVP</p>
+		    </div>
+		    <div class="div29"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-9/Polished.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Polished</p>
+		    </div>
+	</div>
+
+	<h2>What will be the quality of your experience?</h2>
+	<div class="theme-two">
+	 		<div class="div30"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-10/n_a.png" class = "imgclass"/>
+		    	</div>
+		    	<p>N/A</p>
+		    </div>
+		    <div class="div31"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-10/Complete.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Complete</p>
+		    </div>
+	</div>
+
+	<h2>What kind of analytics data will you track?</h2>
+	<div class="theme-three">
+	 		<div class="div32"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-11/none.png" class = "imgclass"/>
+		    	</div>
+		    	<p>None</p>
+		    </div>
+		    <div class="div33"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-11/Minimal.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Minimal</p>
+		    </div>
+		    <div class="div34"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-11/Everything.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Everything</p>
+		    </div>
+	</div>
+
+	<h2>How important reliability/scale be to your app?</h2>
+	<div class="theme-two">
+	 		<div class="div35"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-12/not_important.png" class = "imgclass"/>
+		    	</div>
+		    	<p> Not Important </p>
+		    </div>
+		    <div class="div36"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-12/important.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Important</p>
+		    </div>
+	</div>
+
+	<h2>Will you need a web portal to administer your app?</h2>
+	<div class="theme-two">
+	 		<div class="div37"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-13/not_important.png" class = "imgclass"/>
+		    	</div>
+		    	<p> Not Important </p>
+		    </div>
+		    <div class="div38"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-13/important.png" class = "imgclass"/>
+		    	</div>
+		    	<p> Important</p>
+		    </div>
+	</div>
+
+	<h2>Will your app leverage an existing backend application?</h2>
+	<div class="theme-four">
+ 		<div class="div39"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing Page/Step-14/No_major_backend_logic.png" class = "imgclass"/>
+	    	</div>
+	    	<p>No major backend logic</p>
+	    </div>
+	    <div class="div40"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing Page/Step-14/with_ready_service.png" class = "imgclass"/>
+	    	</div>
+	    	<p>Backend build with ready services</p>
+	    </div>
+	    <div class="div41"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing Page/Step-14/not_service_enabled.png" class = "imgclass"/>
+	    	</div>
+	    	<p>Backend build not service enabled</p>
+	    </div>
+	     <div class="div42"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing Page/Step-14/needs_to_be_created.png" class = "imgclass"/>
+	    	</div>
+	    	<p>Backend needs to be created</p>
+	    </div>
+	</div>
+
+	<h2>Will your app need to work in offline mode?</h2>
+	<div class="theme-two">
+	 		<div class="div43"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-15/Not_Required.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Not Required</p>
+		    </div>
+		    <div class="div44"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing Page/Step-15/Required.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Required</p>
 		    </div>
 	</div>
 
@@ -219,7 +389,14 @@
 
 
 
-    
+
+<footer>
+    <div class="row bottom-footer">
+      <h6 class="hi-footerfont">
+        &copy; <span class = "white">Hashed</span> <span class="orange">In</span> Technologies Pvt. Ltd., 2015
+      </h6>
+    </div>
+</footer>    
   <!-- </div> -->
 
 <!--   <div id = "diamond"> </div> -->
