--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 <header>
-    <div class="row top-header">
-    <img src="/img/Assets/Landing Page/Header/hashedin_logo.png">
+    <div class="top-header">
+    <img src="/img/Assets/Landing-Page/Header/hashedin_logo.png">
     </div>
 </header>
   <!--[if lt IE 10]>
@@ -32,11 +32,12 @@
   <!-- <img src="img/Assets/Landing Page/Header/banner_bg.png" > -->
   <div class = "start">
 	  <div class = "left-half">
-	  	<div class = "triangle-down">
-	  		<!-- <img src="/img/Assets/Landing Page/Header/android_logo.png"> -->
-	  	</div>
-	  	<div class = "triangle-up"></div>
-	  	<div class = "triangle-down"></div>
+	  	<div class="kwadrat2">
+		<div class="trojkat2">
+		<div class="trojkat_bg2"></div>	
+		</div>
+		</div>
+	
 	  </div>
 	  <div class="right-half">
 	  <h1>HOW MUCH</h1>
@@ -50,58 +51,59 @@
   <!-- <div id="diamond"> -->
   	
   	<div class="theme-five">
- 		<div class="div1"> 	
-	    	<div class="imagecontainer" id="platform_iOS">
-	    		<img src="/img/Assets/Landing Page/Step-1/iOS.png" class = "imgclass"/>
+ 		<div class="div1 a" id="platform_iOS"> 	
+	    	<div class="imagecontainer " id="ypyo">
+	    		<img src="/img/Assets/Landing-Page/Step-1/iOS.png" class = "imgclass"/>
 	    	</div>
 	    	<p>iOS</p>
 	    </div>
-	    <div class="div2"> 	
-	    	<div class="imagecontainer" id="platform_Android">
-	    		<img src="/img/Assets/Landing Page/Step-1/Android.png" class = "imgclass"/>
+	    <div class="div2 a" id="platform_Android"> 	
+	    	<div class="imagecontainer xexus">
+	    		<img src="/img/Assets/Landing-Page/Step-1/Android.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Android</p>
 	    </div>
-	    <div class="div3"> 	
-	    	<div class="imagecontainer" id="platform_Windows">
-	    		<img src="/img/Assets/Landing Page/Step-1/Windows.png" class = "imgclass"/>
+	    <div class="div3 a" id="platform_Windows"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing-Page/Step-1/Windows.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Windows</p>
 	    </div>
-	    <div class="div4"> 	
-	    	<div class="imagecontainer" id="platform_Blackberry">
-	    		<img src="/img/Assets/Landing Page/Step-1/Blackberry.png" class = "imgclass"/>
+	    <div class="div4 a" id="platform_Blackberry"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing-Page/Step-1/Blackberry.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Blackberry</p>
 	    </div>
-	    <div class="div5"> 	
-	    	<div class="imagecontainer" id="platform_Web">
-	    		<img src="/img/Assets/Landing Page/Step-1/Web.png" class = "imgclass"/>
+	    <div class="div5 a" id="platform_Web"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing-Page/Step-1/Web.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Web</p>
 	    </div>
     </div>
+    <div id="total1">$0</div>
 
     <h2>How big is your app going to be?</h2>
 
 	<div class="theme-three">
 	 		<div class="div6"> 	
 		    	<div class="imagecontainer" id="size_small">
-		    		<img src="/img/Assets/Landing Page/Step-2/small.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-2/small.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Small</p>
 		    	<span class="inner_span">(1-3 Screens)</span>
 		    </div>
 		    <div class="div7"> 	
 		    	<div class="imagecontainer" id="size_medium">
-		    		<img src="/img/Assets/Landing Page/Step-2/Medium.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-2/Medium.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Medium</p>
 		    	<span class="inner_span">(3-8 Screens)</span>
 		    </div>
 		    <div class="div8"> 	
 		    	<div class="imagecontainer" id="size_large">
-		    		<img src="/img/Assets/Landing Page/Step-2/Large.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-2/Large.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Large</p>
 		    	<span class="inner_span">(9+ Screens)</span>
@@ -114,25 +116,25 @@
 	<div class="theme-four">
  		<div class="div9"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-3/n_a.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-3/n_a.png" class = "imgclass"/>
 	    	</div>
 	    	<p>N/A</p>
 	    </div>
 	    <div class="div10"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-3/Standard.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-3/Standard.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Standard</p>
 	    </div>
 	    <div class="div11"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-3/Social.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-3/Social.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Social</p>
 	    </div>
 	     <div class="div12"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-3/Enterprise.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-3/Enterprise.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Enterprise</p>
 	    </div>
@@ -143,14 +145,14 @@
 	<div class="theme-three">
 	 		<div class="div13"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-4/n_a.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-4/n_a.png" class = "imgclass"/>
 		    	</div>
 		    	<p>N/A</p>
 		    	<span class="inner_span">(I am not storing any data)</span>
 		    </div>
 		    <div class="div14"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-4/data.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-4/data.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Data</p>
 		    	<span class="inner_span">(Just structured data,
@@ -158,7 +160,7 @@
 		    </div>
 		    <div class="div15"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-4/Large-Files.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-4/Large-Files.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Large Files</p>
 		    	<span class="inner_span">(Structured data plus files
@@ -170,19 +172,19 @@
 	<div class="theme-three">
 	 		<div class="div16"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-5/no.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-5/no.png" class = "imgclass"/>
 		    	</div>
 		    	<p>No</p>
 		    </div>
 		    <div class="div17"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-5/simple.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-5/simple.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Simple</p>
 		    </div>
 		    <div class="div18"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-5/Advanced.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-5/Advanced.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Advanced</p>
 		    </div>
@@ -192,19 +194,19 @@
 	<div class="theme-three">
 	 		<div class="div19"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-6/no.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-6/no.png" class = "imgclass"/>
 		    	</div>
 		    	<p>No</p>
 		    </div>
 		    <div class="div20"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-6/simple.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-6/simple.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Simple</p>
 		    </div>
 		    <div class="div21"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-6/Advanced.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-6/Advanced.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Advanced</p>
 		    </div>
@@ -214,19 +216,19 @@
 	<div class="theme-three">
 	 		<div class="div22"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-7/no.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-7/no.png" class = "imgclass"/>
 		    	</div>
 		    	<p>No</p>
 		    </div>
 		    <div class="div23"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-7/simple.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-7/simple.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Simple</p>
 		    </div>
 		    <div class="div24"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-7/Advanced.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-7/Advanced.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Advanced</p>
 		    </div>
@@ -237,19 +239,19 @@
 	<div class="theme-three">
 	 		<div class="div25"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-8/n_a.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-8/n_a.png" class = "imgclass"/>
 		    	</div>
 		    	<p>N/A</p>
 		    </div>
 		    <div class="div26"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-8/Push_SMS_Email.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-8/Push_SMS_Email.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Push,SMS,Email</p>
 		    </div>
 		    <div class="div27"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-8/Advanced_social.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-8/Advanced_social.png" class = "imgclass"/>
 		    	</div>
 		    	<p> Advanced social integration</p>
 		    </div>
@@ -259,13 +261,13 @@
 	<div class="theme-two">
 	 		<div class="div28"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-9/mvp.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-9/mvp.png" class = "imgclass"/>
 		    	</div>
 		    	<p>MVP</p>
 		    </div>
 		    <div class="div29"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-9/Polished.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-9/Polished.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Polished</p>
 		    </div>
@@ -275,13 +277,13 @@
 	<div class="theme-two">
 	 		<div class="div30"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-10/n_a.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-10/n_a.png" class = "imgclass"/>
 		    	</div>
 		    	<p>N/A</p>
 		    </div>
 		    <div class="div31"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-10/Complete.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-10/Complete.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Complete</p>
 		    </div>
@@ -291,19 +293,19 @@
 	<div class="theme-three">
 	 		<div class="div32"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-11/none.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-11/none.png" class = "imgclass"/>
 		    	</div>
 		    	<p>None</p>
 		    </div>
 		    <div class="div33"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-11/Minimal.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-11/Minimal.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Minimal</p>
 		    </div>
 		    <div class="div34"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-11/Everything.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-11/Everything.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Everything</p>
 		    </div>
@@ -313,13 +315,13 @@
 	<div class="theme-two">
 	 		<div class="div35"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-12/not_important.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-12/not_important.png" class = "imgclass"/>
 		    	</div>
 		    	<p> Not Important </p>
 		    </div>
 		    <div class="div36"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-12/important.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-12/important.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Important</p>
 		    </div>
@@ -329,13 +331,13 @@
 	<div class="theme-two">
 	 		<div class="div37"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-13/not_important.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-13/not_important.png" class = "imgclass"/>
 		    	</div>
 		    	<p> Not Important </p>
 		    </div>
 		    <div class="div38"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-13/important.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-13/important.png" class = "imgclass"/>
 		    	</div>
 		    	<p> Important</p>
 		    </div>
@@ -345,25 +347,25 @@
 	<div class="theme-four">
  		<div class="div39"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-14/No_major_backend_logic.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-14/No_major_backend_logic.png" class = "imgclass"/>
 	    	</div>
 	    	<p>No major backend logic</p>
 	    </div>
 	    <div class="div40"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-14/with_ready_service.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-14/with_ready_service.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Backend build with ready services</p>
 	    </div>
 	    <div class="div41"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-14/not_service_enabled.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-14/not_service_enabled.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Backend build not service enabled</p>
 	    </div>
 	     <div class="div42"> 	
 	    	<div class="imagecontainer">
-	    		<img src="/img/Assets/Landing Page/Step-14/needs_to_be_created.png" class = "imgclass"/>
+	    		<img src="/img/Assets/Landing-Page/Step-14/needs_to_be_created.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Backend needs to be created</p>
 	    </div>
@@ -373,25 +375,19 @@
 	<div class="theme-two">
 	 		<div class="div43"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-15/Not_Required.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-15/Not_Required.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Not Required</p>
 		    </div>
 		    <div class="div44"> 	
 		    	<div class="imagecontainer">
-		    		<img src="/img/Assets/Landing Page/Step-15/Required.png" class = "imgclass"/>
+		    		<img src="/img/Assets/Landing-Page/Step-15/Required.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Required</p>
 		    </div>
 	</div>
-
-
-
-
-
-
 <footer>
-    <div class="row bottom-footer">
+    <div class="bottom-footer">
       <h6 class="hi-footerfont">
         &copy; <span class = "white">Hashed</span> <span class="orange">In</span> Technologies Pvt. Ltd., 2015
       </h6>
@@ -409,6 +405,7 @@
 
   <!-- build:js scripts/main.js -->
   <script src="scripts/app.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <!-- endbuild -->
 </body>
 </html>
