select is working for first div

--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,12 @@
 
   <!-- <img src="img/Assets/Landing Page/Header/banner_bg.png" > -->
   <div class = "start">
-	  <div class = "left-half">
-	  	<div class="kwadrat2">
-		<div class="trojkat2">
-		<div class="trojkat_bg2"></div>	
+	  <div class = "left-half">	
+		<div class = "triangle-down">
+			<img src="/img/Assets/Landing-Page/Header/android_logo.png">
 		</div>
 		</div>
 	
-	  </div>
 	  <div class="right-half">
 	  <h1>HOW MUCH</h1>
 	  <h1>TO MAKE AN APP</h1>
@@ -52,13 +50,13 @@
   	
   	<div class="theme-five">
  		<div class="div1 a" id="platform_iOS"> 	
-	    	<div class="imagecontainer " id="ypyo">
+	    	<div class="imagecontainer" id="ypyo">
 	    		<img src="/img/Assets/Landing-Page/Step-1/iOS.png" class = "imgclass"/>
 	    	</div>
 	    	<p>iOS</p>
 	    </div>
 	    <div class="div2 a" id="platform_Android"> 	
-	    	<div class="imagecontainer xexus">
+	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-1/Android.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Android</p>
@@ -87,22 +85,22 @@
     <h2>How big is your app going to be?</h2>
 
 	<div class="theme-three">
-	 		<div class="div6"> 	
-		    	<div class="imagecontainer" id="size_small">
+	 		<div class="div6 b" id="size_small"> 	
+		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing-Page/Step-2/small.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Small</p>
 		    	<span class="inner_span">(1-3 Screens)</span>
 		    </div>
-		    <div class="div7"> 	
-		    	<div class="imagecontainer" id="size_medium">
+		    <div class="div7 b"  id="size_medium"> 	
+		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing-Page/Step-2/Medium.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Medium</p>
 		    	<span class="inner_span">(3-8 Screens)</span>
 		    </div>
-		    <div class="div8"> 	
-		    	<div class="imagecontainer" id="size_large">
+		    <div class="div8 b" id="size_large"> 	
+		    	<div class="imagecontainer">
 		    		<img src="/img/Assets/Landing-Page/Step-2/Large.png" class = "imgclass"/>
 		    	</div>
 		    	<p>Large</p>
