Latest code with tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -78,19 +78,21 @@
 	    	<p>Web</p>
 	    </div>
     </div>
-    <!-- <div id="total1">$0</div> -->
-    <div class = "progress-bar-container">
+    <div class = "progress-bar-container" id="theFixed">
     	<section class="section">
     <div class="col-md-2 col-lg-2"></div>
     <div class="col-md-8 col-lg-8">   
-	<div class="progress">
+	<div class="progress-1">
   	<div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10" >   
-        <span  class="popOver" data-toggle="tooltip" data-placement="top" title="$0"> </span>     
+  	       
 	</div>
+	<div class="tool"></div>
+      <div class="price"></div>
 	</div>
      <div class="col-md-2 col-lg-2"></div>
 	</div>
 	</section>
+
     </div>
 
     <h2>How big is your app going to be?</h2>
@@ -433,7 +435,6 @@
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="libs/jquery/dist/jquery.js"></script>
-
   <script src="libs/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
