Progress bar with bulletian points added.

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,7 @@
     <div>
     	 <span class="glyphicon glyphicon-menu-left"></span>
     	 <span>Prev</span>
+    	 <!-- <span class="triangle-up"></span> -->
     	 <span class="space"></span>
     	 <span class="next-text">Next</span>
     	 <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
@@ -127,17 +128,15 @@
 	</div>
 </div>
 <div class = "progress-bar-container">
-	<!-- <hr width="60%" padding-top="30%"> -->
-	<span class="x">  </span>
-	<span> <hr> </span>
+	<span class="background"></span>
 </div>
-<footer>
+<!-- <footer>
     <div class="bottom-footer">
       <h6 class="hi-footerfont">
         &copy; <span class = "white">Hashed</span><span class="orange">In</span> Technologies Pvt. Ltd., 2015
       </h6>
     </div>
-</footer> 
+</footer>  -->
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="libs/jquery/dist/jquery.js"></script>
